# road-lurker

./: .gitignore  README.md
getting-started-leafletjs/: getting-started.html  getting-started.js
python-api-test/: api-test.py  post.xml
server/: Dockerfile  run.sh  run_cargo.sh  run_docker.sh  run_downloader.sh  run_server.sh  run_timeline.sh
server/road-lurker/: Cargo.toml
server/road-lurker/client/: data.json  index.html  main.js  stylesheet.css  template.html
server/road-lurker/data/: cameras.json  place_data_here.txt
server/road-lurker/src/: index.html  main.rs
server/road-lurker/src/trafikverket/: mod.rs  trafikverket.rs
server/road-lurker/src/trafikverket/xml/: post.xml
